# cognition

./: Cargo.toml  README.md  decision_prompt_template.yaml  decision_tree.yaml  wolfram_tool.yaml
crates/cognition/: Cargo.toml
crates/cognition-cli/: Cargo.toml
crates/cognition-cli/src/: main.rs
crates/cognition-server/: Cargo.toml
crates/cognition/src/: config.rs  engine.rs  lib.rs
crates/cognition/src/models/: davinci003.rs  mod.rs  textgen.rs
crates/cognition/src/templates/: decision.rs  mod.rs
crates/cognition/src/tools/: mod.rs  signal.rs  wolfram_alpha.rs
docs/: llama_prompts.md
